# GeometryCrafter

./: .gitignore  GC_SEG.ipynb  launcher.ipynb  npz2mp4.py  pyproject.toml  run.py
gc_seg/: __init__.py  aligner.py  extractor.py  merger.py  metadata.py  post_processor.py  segment_worker.py
geometrycrafter/: determ_ppl.py  diff_ppl.py
